[package]
name = "cch23-phantie"
version = "0.1.0"
edition = "2021"

[dependencies]

# json
# query
axum = { version = "0.6.20", default-features = false, features = [] }

hyper = "0.14.27"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"

[dev-dependencies]

# json
reqwest = { version = "0.11.22", default-features = false, features = [] }
