[package]
name = "cch23-phantie"
version = "0.1.0"
edition = "2021"

[dependencies]

# query
axum = { version = "0.6.20", default-features = false, features = ["json"] }

hyper = "0.14.27"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"

[dev-dependencies]

reqwest = { version = "0.11.22", default-features = false, features = ["json"] }

[profile.release]
opt-level = 0
